--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Aufgabe_2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Aufgabe_2.tex
@@ -220,7 +220,7 @@ schaft erfüllt ist.}
 Ein Baum mit nur einen Knoten $n=1$ kann nur genau einen Schlüssel enthalten ( $K_{1}$ ), damit sind die BST(binary search tree)-Eigenschaften erfüllt.
 
 \textbf{Induktionsvoraussetzung}\\
-
+Wir nehmen an, dass das für alle binären Bäume mit weniger als $n$ Knoten zutrifft.
 
 \textbf{Induktionsschritt} \\
 $T$ ist nun ein binärer Baum mit $n \geq 2$ Knoten. \\
