--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
@@ -3,11 +3,11 @@
 \coursetitle{Algorithmen und Datenstrukturen}
 \courselabel{AuD}
 \exercisesheet{Assignment 2}{Algorithmen und Datenstrukturen}
-\student{Moritz Ruge \& Lennard}
+\student{Moritz Ruge \& Lennard Wittenberg}
 \school{Bachelor Informatik}
 \university{Freie Universitäten Berlin}
 \semester{Sommer Semester 2025}
-\date{09 Mai 2025}
+\date{08 Mai 2025}
 %\usepackage[pdftex]{graphicx}
 %\usepackage{subfigure} 
 \usepackage[backend=biber,style=numeric,url=true]{biblatex} % für Quellenangaben und Bibliotheken
