fixed a variable name

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Aufgabe_2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Aufgabe_2.tex
@@ -231,7 +231,7 @@ Nun müssen wir die Schlüssel $K = \{k_{1} < k_{2} < ... < k_{n}\}$ auf die Kno
 
 \begin{itemize}
 	\item Dabei bekommt der Wuzelknoten von $T$ den Schlüssel $k_{n_{L}+1}$
-	\item die kleineren Schlüssel landen in den linken Teilbaum $K_{L}$
+	\item die kleineren Schlüssel landen in den linken Teilbaum $T_{L}$
 	\begin{itemize}
 		\item also kriegt der linke Teilbaum die $n_{L}$ Schlüssel $\{k_{1},...,k_{n_{L}}\}$
 	\end{itemize}
