--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/config.tex
@@ -25,9 +25,12 @@
 %}
 \usepackage{xcolor}
 
-%%% draws layout frames
+%%%%% draws layout frames %%%%%
 %\usepackage{showframe}
 
+%%%%% Multiple Columns %%%%%
+% see: https://www.overleaf.com/learn/latex/Multiple_columns
+\usepackage{multicol}
 
 
 \hypersetup{
