Added lennards task_3b

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
@@ -17,7 +17,9 @@
 %%% Import Aufgabe 2 %%%
 %\input{Aufgabe_2.tex}
 
-	
+
+%%% Import Aufgabe 3 %%%
+\input{Aufgabe_3.tex}
 
 %Quellen Reference
 %\newpage
