Added the questions for task 2

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
@@ -1,3 +1,6 @@
+%%%%% TODO %%%%%
+% change the numbering on the fooder
+
 \documentclass[a4paper]{article}
 
 %%% Import Confit %%%
@@ -15,8 +18,8 @@
 
 
 %%% Import Aufgabe 2 %%%
-%\input{Aufgabe_2.tex}
-
+\input{Aufgabe_2.tex}
+\newpage
 
 %%% Import Aufgabe 3 %%%
 \input{Aufgabe_3.tex}
