--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Aufgabe_2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Aufgabe_2.tex
@@ -1,13 +1,21 @@
-\section*{{Problem 2:}} 
+\section*{Problem 2: findRange} 
 
 
-\subsection*{a) }
+\textbf{a)} Betrachten Sie den folgenden binären Suchbaum:
+\noindent
+Wo befinden sich die Schlüssel, die kleiner sind als 37? Wo befinden sich die
+Schlüssel, die größer sind als 21? Wo befinden sich die Schlüssel, die zwischen
+21 und 37 liegen?
 
+\begin{center}
+\includegraphics[scale=1]{Aufgabe2}
+\end{center}
 
-\subsection*{b) } 
-
-
-\subsection*{c) } 
+\noindent
+\textbf{b)} Beschreiben Sie, wie man in einem AVL-Baum mit $n$ Schlüsseln die Operation
+findRange(k1 , k2 ) implementieren kann, die alle Schlüssel $k$ liefert, für die
+$k1 \leq k \leq k2$ ist. Die Laufzeit soll $O(log n + s)$ betragen. Dabei ist s die Anzahl
+der gelieferten Schlüssel.
 
 
 
