--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Titlepage.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Titlepage.tex
@@ -8,7 +8,7 @@
     {\Large Moritz Ruge \par}
     \vspace{0.1cm}
     {\small Matrikelnummer: 5600961 \par}
-    {\Large \{Vor-Nachname\} \par}
+    {\Large Lennard Wittenberg \par}
     \vspace{0.1cm}
     {\small Matrikelnummer: ---\par}
     \vfill
