--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/config.tex
@@ -1,7 +1,12 @@
 \usepackage[left=3cm, right=2.5cm]{geometry} % Hier die Ränder definieren
 
-%\usepackage[pdftex]{graphicx}
-%\usepackage{subfigure} 
+
+
+
+\usepackage[pdftex]{graphicx}
+%%%%% Path for Pictures %%%%%%
+\graphicspath{ {./Pictures} }
+\usepackage{subfigure} 
 \usepackage[backend=biber,style=numeric,url=true]{biblatex} % für Quellenangaben und Bibliotheken
 \usepackage[]{hyperref} % für hyperlinks
 \usepackage{array} % für die Tabelle
@@ -41,3 +46,4 @@
     pdftitle={Overleaf Example},
     pdfpagemode=FullScreen,
     }
+    
