Added subtask 2b... dunno if right though

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
@@ -9,12 +9,12 @@
 \begin{document}
 
 %%% Import Titlepage %%%
-\input{Titlepage.tex}
+%\input{Titlepage.tex}
 
 
 %%% Import Aufgabe 1 %%%
-\input{Aufgabe_1.tex}
-\newpage
+%\input{Aufgabe_1.tex}
+%\newpage
 
 
 %%% Import Aufgabe 2 %%%
@@ -22,7 +22,7 @@
 \newpage
 
 %%% Import Aufgabe 3 %%%
-\input{Aufgabe_3.tex}
+%\input{Aufgabe_3.tex}
 
 %Quellen Reference
 %\newpage
