init commit task 3a

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
@@ -18,11 +18,11 @@
 
 
 %%% Import Aufgabe 2 %%%
-\input{Aufgabe_2.tex}
-\newpage
+%\input{Aufgabe_2.tex}
+%\newpage
 
 %%% Import Aufgabe 3 %%%
-%\input{Aufgabe_3.tex}
+\input{Aufgabe_3.tex}
 
 %Quellen Reference
 %\newpage
